[gd_scene load_steps=3 format=2]

[ext_resource path="res://Preview.gd" type="Script" id=1]
[ext_resource path="res://white_rect_10x10.png" type="Texture" id=2]

[node name="Preview" type="WindowDialog"]
visible = true
margin_left = 760.03
margin_top = 23.0662
margin_right = 862.03
margin_bottom = 123.066
rect_min_size = Vector2( 100, 100 )
window_title = "Preview"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_Preview_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Preview_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
